--- a/assests/style.css
+++ b/assests/style.css
@@ -17,6 +17,9 @@ header {
 
 body {
     background-color: aliceblue;
+    display: flex;
+    position: absolute;
+    flex-direction: column;
 }
 
 
@@ -40,7 +43,7 @@ body {
     bottom: 70px;
 }
 
-nav {
+.nav {
     display: flex;
     padding-bottom: 10px;
     background-color: lightblue;
@@ -50,9 +53,9 @@ nav {
     bottom: 50px;
 }
 
-nav a {
+.nav a {
     padding: 30px 24px;
-    font-size: 25px;
+    font-size: 35px;
     color: black;
     position: relative;
     top: 30px;
@@ -80,7 +83,6 @@ main h1 {
     display: flex;
     position: absolute;
     left: 200px;
-    background-color: red;
     
 }
 
@@ -105,10 +107,14 @@ section {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-
+    padding: 20px 16px;
+    margin-right: 30%;
+    
 }
 
 .card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
     width: 50%;
     margin: 10px 0;
     background-color: lightblue;
@@ -118,13 +124,18 @@ section {
     display: block;
     right: 100px;
     border: 8px solid grey;
+    border-radius: 5px;
     
+}
+
+.card-contanier:hover {
+    box-shadow: 10px 8px 10px 10px black;
 }
 
 .card-tittle {
     position: absolute;
     display: flex;
-    border: 1px solid;
+    /* border: 1px solid; */
     max-width: 30%;
     left: 200px;
     font-size: 35px;
@@ -161,3 +172,26 @@ section {
     background-image: -o-linear-gradient(top, #000, #000, #000);
     background-image: linear-gradient(top, #000, #000, #000);
   }
+
+hr {
+    height: 2px;
+    border-width: 0;
+    color: grey;
+    background-color: grey;
+
+}
+
+footer h1 {
+    text-decoration: underline black;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.contact a {
+    padding: 45px;
+    left: 200px;
+    color: black;
+    font-size: 25px;
+    margin-right: 5%;
+}
